# grafica

./: appunti_superbible  appunti_superbible~  collision_detection  linksOpengl.txt
blender/: Bench.blend  Ceiling_light3.blend  Cushion.blend  Groovy-armchair.blend  Lamppost.blend  Low_table2.blend  Table2.blend  Table_glass.blend  apple-imac-2004.blend  apple.blend  bullet-trash-can.blend  complements4.blend  db_jager.blend  farolas_iguzzini.blend  flashlight.blend  fluorescent.blend  full-bookcase.blend  lightbank.blend  silla_teca.blend  tansu_009.blend
blender/V2OGL101/: ReadMe.html  ReadMe.txt
esami/: 20080422.doc  esame20070402.soluzione.c  esame20070410.solutione.c  esame20070518.soluzione.c  esame20070704.soluzione.c  esame20070911.soluzione.c  esame28aprilea.doc  esame28aprileb.doc
esami/28aprileb/: Makefile  esame2008  (+1 more)
nate/sgi-src/sgi/: CMakeLists.txt  Makefile  area.c  maiden.c  multiview.c  nii.c  null.c  qix.c  rotate.c  starfield.c  strip.c  texture.c  voronoi.c
nate/sgi-src/sgi/ppm/: ace-128x128.ppm  ace-64x64.ppm  deadone-128x128.ppm  deadone-64x64.ppm  space-128x128.ppm  space-64x64.ppm  virus-128x128.ppm  virus-64x64.ppm
nate/sgi-src/sgi/sgi.vsnetproj/: area.vcproj  maiden.vcproj  multiview.vcproj  nii.vcproj  null.vcproj  qix.vcproj  rotate.vcproj  sgi.sln  starfield.vcproj  strip.vcproj  texture.vcproj  voronoi.vcproj
slides/: 01_cap3_trasformazioniaffini.ppt  02_plasm_2008.ppt  03_plasm_2008.ppt  05_cap4_primitivegrafiche_2008.ppt  12_tesine.ppt  13.plasm_xml_viewer.ppt  16_opengl_argomentiavanzati.ppt  17_esercitazione_opengl.ppt
(+228 files in other folders)
